force-app/main/default/objects/Lead_Score_Criteria__mdt/Lead_Score_Criteria__mdt.object-meta.xml
<CustomObject>
    <description>Criteria for scoring Leads</description>
    <label>Lead Score Criteria</label>
    <pluralLabel>Lead Score Criteria</pluralLabel>
</CustomObject>