force-app/main/default/objects/Lead_Score_Criteria__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if this criterion should be used in the lead scoring or not</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>