force-app/main/default/objects/Lead_Score_Criteria__mdt/fields/End_Value__c.field-meta.xml
<CustomField>
    <fullName>End_Value__c</fullName>
    <description>The end value of the range (used only for &apos;Between&apos; operator)</description>
    <label>End Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>