force-app/main/default/objects/Lead_Score_Criteria__mdt/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <description>Field to compare with the value</description>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>