force-app/main/default/objects/Lead_Score_Criteria__mdt/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <description>The operator to use for comparison</description>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equals</fullName>
                <default>true</default>
                <label>Equals</label>
            </value>
            <value>
                <fullName>Contains</fullName>
            </value>
            <value>
                <fullName>GreaterThan</fullName>
            </value>
            <value>
                <fullName>LessThan</fullName>
            </value>
            <value>
                <fullName>IsBlank</fullName>
            </value>
            <value>
                <fullName>IsNotBlank</fullName>
            </value>
            <value>
                <fullName>Between</fullName>
            </value>
            <value>
                <fullName>NotContains</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>