force-app/main/default/objects/Lead_Score_Criteria__mdt/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>The score to assign if the condition is met.</description>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>