force-app/main/default/objects/Lead_Score_Criteria__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>The value to compare against</description>
    <label>Value</label>
    <type>TextArea</type>
</CustomField>